--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     passToggle.src = "asset/eye-open.svg";
                 } else {
                     passInput.type = "password";
-                    passToggle.src = "asset/eye-closed.svg";
+                    passToggle.src = "asset/eyes-a95130fc.svg";
                 }
             });
 
