--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             passToggle.addEventListener("click", function () {
                 if (passInput.type === "password") {
                     passInput.type = "text";
-                    passToggle.src = "asset/eye-open.svg";
+                    passToggle.src = "asset/eyes-a95130fc.svg";
                 } else {
                     passInput.type = "password";
                     passToggle.src = "asset/eyes-a95130fc.svg";
