--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
 
+    <!-- FontAwesome for icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+
     <script type="text/javascript">
         document.addEventListener("DOMContentLoaded", function () {
             console.log("working");
@@ -18,10 +21,12 @@
             passToggle.addEventListener("click", function () {
                 if (passInput.type === "password") {
                     passInput.type = "text";
-                    passToggle.src = "/asset/eyes-a95130fc.svg";
+                    passToggle.classList.remove("fa-eye");
+                    passToggle.classList.add("fa-eye-slash");
                 } else {
                     passInput.type = "password";
-                    passToggle.src = "/asset/eyes-a95130fc.svg";
+                    passToggle.classList.remove("fa-eye-slash");
+                    passToggle.classList.add("fa-eye");
                 }
             });
 
@@ -80,12 +85,7 @@
                         class="w-full rounded-md bnbn p-4 outline-none pl-2 transition-all bg-gray-100 focus:border-primary focus:border font-semibold"
                         placeholder="Password"
                     />
-                    <img
-                        id="passToggle"
-                        src="asset/eye-closed.svg"
-                        class="absolute top-1/2 bottom-1/2 right-3 my-auto cursor-pointer"
-                        alt="Toggle Password"
-                    />
+                    <i id="passToggle" class="fa-solid fa-eye absolute top-1/2 right-3 -translate-y-1/2 cursor-pointer"></i>
                 </div>
 
                 <!-- Hidden fields for better UX -->
